Fix overflowing divider

--- a/src/assets/styles/elements/hr.pcss
+++ b/src/assets/styles/elements/hr.pcss
@@ -1,5 +1,4 @@
 hr {
-  width: 100%;
   height: 1px;
   border: 0;
   margin: 0;
